# dark-matter-lensing-phenomenology-quantum-ml

./: .gitignore  README.md  pyproject.toml
dark_matter_lensing_qml/: __init__.py  classical.py  config.py  data.py  evals.py  experiments.py  quantum.py  training.py  typing_.py
notebooks/: common_test_i.ipynb  quantum_ml_iii.ipynb
submission_weights/: common_test_i_residual_cnn.pt  quantum_ml_iii_bundle.pt
tests/: test_data.py  test_experiments.py  test_training_smoke.py
