[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dark-matter-lensing-phenomenology-quantum-ml"
version = "0.1.0"
description = ""
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.0",
    "pillow>=10.0",
    "scikit-learn>=1.5",
    "matplotlib>=3.8",
    "torch>=2.3",
    "pennylane>=0.39",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "mypy>=1.10",
]

[tool.setuptools.packages.find]
include = ["dark_matter_lensing_qml*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
disallow_any_generics = false